--- a/Demo/Storyboard.storyboard
+++ b/Demo/Storyboard.storyboard
@@ -94,6 +94,22 @@
                                     <action selector="showAlertWithHUD:" destination="fUS-nh-a92" eventType="touchUpInside" id="Z3k-oz-l2L"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aeK-ZH-rl7">
+                                <rect key="frame" x="20" y="181" width="440" height="40"/>
+                                <color key="backgroundColor" white="1" alpha="0.66000000000000003" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="7p3-fo-h1r"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Show Status HUD">
+                                    <color key="titleColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="showProgressHUD:" destination="fUS-nh-a92" eventType="touchUpInside" id="Vab-Vq-WXE"/>
+                                    <action selector="showStatusHUD:" destination="fUS-nh-a92" eventType="touchUpInside" id="r0A-Sy-xST"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -102,10 +118,13 @@
                             <constraint firstItem="9dj-k6-s89" firstAttribute="top" secondItem="anS-2E-3FN" secondAttribute="bottom" constant="8" id="79S-pj-shS"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="nOA-ax-T4A" secondAttribute="trailing" constant="20" id="J0o-a0-s8W"/>
                             <constraint firstItem="9dj-k6-s89" firstAttribute="leading" secondItem="ZJE-RV-lYd" secondAttribute="leading" constant="20" id="Miw-ga-2Vf"/>
+                            <constraint firstItem="aeK-ZH-rl7" firstAttribute="leading" secondItem="ZJE-RV-lYd" secondAttribute="leading" constant="20" id="P3A-LV-cFf"/>
                             <constraint firstItem="1Gc-2A-3TB" firstAttribute="leading" secondItem="ZJE-RV-lYd" secondAttribute="leading" constant="20" id="S3v-U1-laR"/>
                             <constraint firstItem="QUK-0M-drm" firstAttribute="top" secondItem="Xe5-Sk-LrC" secondAttribute="bottom" constant="-20" id="Vjc-At-Htt"/>
                             <constraint firstItem="nOA-ax-T4A" firstAttribute="top" secondItem="1Gc-2A-3TB" secondAttribute="bottom" constant="8" id="WCa-Bm-bnp"/>
                             <constraint firstItem="fsH-l9-1Kh" firstAttribute="top" secondItem="9dj-k6-s89" secondAttribute="bottom" constant="19" id="b8a-y3-Vud"/>
+                            <constraint firstItem="1Gc-2A-3TB" firstAttribute="top" secondItem="aeK-ZH-rl7" secondAttribute="bottom" constant="8" id="beE-fl-jCf"/>
+                            <constraint firstAttribute="trailing" secondItem="aeK-ZH-rl7" secondAttribute="trailing" constant="20" id="cqw-fA-Z5o"/>
                             <constraint firstItem="Wkr-90-mst" firstAttribute="leading" secondItem="ZJE-RV-lYd" secondAttribute="leading" constant="20" id="ecu-Hg-6He"/>
                             <constraint firstItem="QUK-0M-drm" firstAttribute="leading" secondItem="ZJE-RV-lYd" secondAttribute="leading" id="gdT-GE-icr"/>
                             <constraint firstAttribute="trailing" secondItem="Wkr-90-mst" secondAttribute="trailing" constant="20" id="kDv-0Q-bhZ"/>
@@ -124,7 +143,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zil-YM-aIl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="535" y="420"/>
+            <point key="canvasLocation" x="287" y="401"/>
         </scene>
     </scenes>
     <resources>
